# fuzz_agent

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  plan.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
configs/: hard_gate_challenge.yaml
configs/examples/: libpng.yaml
db/: schema.sql
docker/ubuntu/: Dockerfile  entrypoint.sh
docs/: M4_Development_Report.md  README.md  development_log_current.md  evaluation.md  experiment_records.md  fuzzpilot_design.md  project_brief.md  quickstart.md
docs/papers/: README.md  paper01_arxiv_placeholder.md  paper01_experiment_plan.md  paper01_experiments_runbook.md  paper01_gemini_supervisor_prompt.md  paper01_ghidra_and_x86_audit.md  paper01_portability_audit.md  paper01_week1_libxml2_plan.md  paper02_when_to_intervene_plan.md  paper03_full_venue_plan.md
experiments/: README.md
experiments/manifests/: paper01_preprint.yaml  paper01_venue.yaml  paper01_week1_libxml2.yaml
experiments/targets/cjson/: cjson_fuzzer  config.yaml  harness.c
experiments/targets/cjson/seeds/: array_of_objects.json  boolean_array.json  escaped_string.json  mixed_array.json  nested_object.json  number_array.json  object_string_keys.json  object_with_array_value.json  seed1.json  string_with_specials.json  unicode.json  whitespace_heavy.json
experiments/targets/libpng/: config.yaml  harness.c  libpng_fuzzer
experiments/targets/libxml2/: config.yaml  harness.c  xml.dict
experiments/targets/libxml2/seeds/: cdata_comment.xml  entity.xml  namespace.xml  nested_attrs.xml  processing_instruction.xml  simple_element.xml
experiments/targets/vuln_target/: Makefile  config.yaml  vuln.c
include/fuzzpilot/: config.hpp  env.hpp  ids.hpp  json_util.hpp  json_utils.hpp  string_util.hpp
include/fuzzpilot/agents/: agent_runtime.hpp
include/fuzzpilot/controller/: run.hpp
include/fuzzpilot/experiments/: m6_matrix.hpp
include/fuzzpilot/interventions/: intervention.hpp
include/fuzzpilot/micro/: evaluator.hpp  manager.hpp
include/fuzzpilot/model/: gateway.hpp
include/fuzzpilot/mutation/: operator_sampler.hpp  range_selector.hpp  recipe_reward_tracker.hpp  recipe_store.hpp  strategy.hpp
include/fuzzpilot/plateau/: detector.hpp
include/fuzzpilot/runner/: afl_runner.hpp  process.hpp
include/fuzzpilot/storage/: db.hpp
include/fuzzpilot/telemetry/: afl_stats.hpp  collector.hpp  mutation_events.hpp
mutators/fuzzpilot/: CMakeLists.txt  afl_custom_mutator.c  mutator_core.cpp  mutator_core.hpp  recipe_cache.cpp  recipe_cache.hpp  telemetry_ring.cpp  telemetry_ring.hpp
papers/paper01/: COMPLETE_EXPERIMENT_PLAN.md  FINAL_AUDIT_REPORT.md  LOGIC_AUDIT_FINAL.md  REVISION_SUMMARY.md  paper01.tex  refs.bib
papers/paper01/arxiv_ready/: submission_form.txt
papers/paper01/figures/: F1_architecture.tikz  F2_recipe_lifecycle.tikz  F3_coverage.tikz  F4_plateau_timeline.tikz  F5_microbench.tikz  F_cycles_distribution.tikz  F_throughput_dot.tikz
results/paper01_ai_recipe_mutation/: README.md  paper_tables.md  per_run_e1ab.tsv  validity_report.md
results/paper01_ai_recipe_mutation/aggregated/: coverage_timeseries.csv  microbench.csv  plateau_recovery.csv  t1_per_run_summary.csv  throughput_parity.csv
results/paper01_ai_recipe_mutation/figures/: coverage_timeseries.csv  reward_distribution.csv
results/paper01_ai_recipe_mutation/matrix_smoke/: m6_matrix.json  m6_matrix.md
results/paper01_ai_recipe_mutation/microbench/: p1_e3_microbench_fp-active_r01.json  p1_e3_microbench_fp-active_r02.json  p1_e3_microbench_fp-active_r03.json  p1_e3_microbench_fp-active_r04.json  p1_e3_microbench_fp-active_r05.json  p1_e3_microbench_fp-empty_r01.json  p1_e3_microbench_fp-empty_r02.json  p1_e3_microbench_fp-empty_r03.json  p1_e3_microbench_fp-empty_r04.json  p1_e3_microbench_fp-empty_r05.json  p1_e3_microbench_vanilla_r01.json  p1_e3_microbench_vanilla_r02.json  p1_e3_microbench_vanilla_r03.json  p1_e3_microbench_vanilla_r04.json  p1_e3_microbench_vanilla_r05.json
results/paper01_ai_recipe_mutation/tables/: T1_per_run_summary.md  T2_case_study.json  T2_case_study.md  T3_related_work.md  coverage_summary.csv  missing_paper_modes.csv  overhead.csv  recipe_quality.csv  run_level.csv  throughput_parity.md
scripts/: build_ubuntu_targets.sh  capture_run_metadata.sh  docker_ubuntu_smoke.sh  fuzzpilot_docker.sh  ida_extractor.py  init_seeds.sh  install_ghidra_ubuntu.sh  prepare_paper01_data.py
scripts/ghidra/: FuzzPilotGhidraExtract.java
scripts/paper01/: ExtractFuzzpilotDict.java  README.md  aggregate.py  auto_run.sh  auto_swap_watchdog.sh  extract_ghidra_dict.sh  extract_strings_dict.py  filter_stdout_logs.sh  plots.py  preflight.sh  review_stats.py  run_all_host.sh  run_batch.sh  run_e1a_e2a.sh  swap_to_nvidia.sh
scripts/paper01/modes/: baseline-afl.yaml  full-agent.yaml  no-mutator.yaml  no-static-analysis.yaml  rule-only.yaml
scripts/paper01/runners/: _run_exp.sh  handoff_week1_libxml2.sh  run_e1a.sh  run_e1b.sh  run_e2a.sh  run_e2b.sh  run_e2c.sh  run_e3.sh  run_venue_stage1.sh  run_week1_libxml2.sh
src/: config.cpp  env.cpp  json_util.cpp  json_utils.cpp  string_util.cpp
src/agents/: agent_runtime.cpp
src/cli/: main.cpp
src/controller/: run.cpp
src/experiments/: m6_matrix.cpp
src/interventions/: default.cpp
src/micro/: evaluator.cpp  manager.cpp
src/model/: gateway.cpp
src/mutation/: operator_sampler.cpp  range_selector.cpp  recipe_reward_tracker.cpp  recipe_store.cpp  strategy.cpp
src/plateau/: detector.cpp
src/runner/: afl_runner.cpp  process_posix.cpp
src/storage/: db.cpp
src/telemetry/: afl_stats.cpp  collector.cpp  mutation_events.cpp
tests/fixtures/: fuzzer_stats_micro_control  fuzzer_stats_micro_dictionary  fuzzer_stats_micro_seed_focus  fuzzer_stats_micro_winner  fuzzer_stats_newer  fuzzer_stats_older  mutator_telemetry.jsonl
tools/: json_utils_smoke.cpp  mutator_smoke.cpp  process_capture_smoke.cpp
tools/mutator_microbench/: CMakeLists.txt  main.cpp  vanilla_havoc.cpp
(+191 files in other folders)
